Validacion de Datos de la ventana de proveedores!

--- a/src/Proveedor/frm_proveedores.form
+++ b/src/Proveedor/frm_proveedores.form
@@ -268,6 +268,7 @@
             <Component class="javax.swing.JTextField" name="Jtf_Id">
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Jtf_IdActionPerformed"/>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="Jtf_IdKeyTyped"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="Jbt_Guardar">
@@ -287,11 +288,18 @@
             <Component class="javax.swing.JTextField" name="Jtf_Nombre_Empresa">
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Jtf_Nombre_EmpresaActionPerformed"/>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="Jtf_Nombre_EmpresaKeyTyped"/>
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="Jtf_Direccion">
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="Jtf_DireccionKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="jtf_Rtn">
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtf_RtnKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="Jbt_Eliminar">
               <Properties>
