--- a/src/inicio_sesion/Pantalla_Inicio_Sesion.form
+++ b/src/inicio_sesion/Pantalla_Inicio_Sesion.form
@@ -144,12 +144,12 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Imagenes/login.png"/>
+          <Image iconType="3" name="/Imagenes/logo.png"/>
         </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="110" y="10" width="300" height="260"/>
+          <AbsoluteConstraints x="140" y="50" width="230" height="200"/>
         </Constraint>
       </Constraints>
     </Component>
